# CreoLingua

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  bun.lockb  package.json  vite.config.ts
.create-qwik-1gci44v1kec/: bun.lockb
public/codicons/: codicon.html
src/: global.css  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: file_contents.rs  lib.rs  loading_and_saving.rs  main.rs  parts_of_speech.rs  words.rs
src/components/action-bar/: action-bar.css  action-bar.tsx
src/components/action-item/: action-item.css  action-item.tsx
src/components/activity-bar/: activity-action.css  activity-bar.css  activity-bar.tsx
src/components/etymology-conjugation-tabs/: etymology-conjugation-tabs.tsx
src/components/getting-started-page/: getting-started-page.css  getting-started-page.tsx
src/components/input-box/: input-box.css  input-box.tsx
src/components/link-button/: link-button.css  link-button.tsx
src/components/markdown-entry/: markdown-entry.css  markdown-entry.tsx
src/components/router-head/: router-head.tsx
src/components/select-dropdown/: select-dropdown.css  select-dropdown.tsx
src/components/sidebar/: sidebar.css  sidebar.tsx
src/components/sidebar-item/: sidebar-item.css  sidebar-item.tsx
src/components/sidebar-row/: sidebar-row.css  sidebar-row.tsx
src/components/sidebar-title/: sidebar-title.css  sidebar-title.tsx
src/components/tab-button/: tab-button.module.css
src/components/text-button/: text-button.css  text-button.tsx
src/components/title-bar/: icon.tsx  title-bar.css  title-bar.tsx
src/components/word-editor/: word-editor.css  word-editor.tsx
src/interfaces/: part-of-speech.tsx  word.tsx
src/routes/: index.tsx  layout.tsx  styles.css
src/routes/grammar/: index.tsx
src/routes/lexical-classes/: index.tsx
src/routes/lexicon/: index.tsx  lexicon.css
src/routes/logographs/: index.tsx
src/routes/parts-of-speech/: index.tsx
src/routes/phonology/: index.tsx
src/routes/phrasebook/: index.tsx
src/routes/properties/: index.tsx
src/routes/quiz/: index.tsx
test-lang/: Solara.pgd
(+1 files in other folders)
