[build-dependencies]
tauri-build = {version = "1.5.1", features = []}

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.6.1", features = ["system-tray", "path-all", "dialog-all", "fs-all", "os-all", "window-all"]}
zip = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package]
authors = ["Joe Targett"]
default-run = "creo_lingua"
description = "CreoLingua is an application for creating conlangs. It is fork of PolyGlot aimed at performance, upgradability and stability."
edition = "2021"
license = ""
name = "creo_lingua"
repository = ""
rust-version = "1.60"
version = "0.1.0"
