[build-dependencies]
tauri-build = {version = "2.0.0-beta", features = [] }

[dependencies]
quickxml_to_serde = "0.6.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "2.0.0-beta", features = [
  "tray-icon"
] }
tauri-plugin-dialog = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.4"
tauri-plugin-os = "2.0.0-beta.3"
zip = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "creo_lingua_lib"

[package]
authors = ["Joe Targett"]
default-run = "creo_lingua"
description = "CreoLingua is an application for creating conlangs. It is fork of PolyGlot aimed at performance, upgradability and stability."
edition = "2021"
license = ""
name = "creo_lingua"
repository = ""
rust-version = "1.60"
version = "0.1.0"
